# src/main/java/com/repomgr/repomanager/infrastructure/VersionService.java
@@ -3,15 +3,22 @@ package com.repomgr.repomanager.infrastructure;
 import com.repomgr.repomanager.constants.Constants;
 import com.repomgr.repomanager.infrastructure.model.VersionEntity;
 import com.repomgr.repomanager.infrastructure.repository.VersionRepository;
-import com.repomgr.repomanager.rest.model.MessageDto;
-import com.repomgr.repomanager.rest.model.ResponseDto;
-import com.repomgr.repomanager.rest.model.VersionInformationDto;
+import com.repomgr.repomanager.rest.model.*;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.BeanUtils;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
+import org.springframework.util.StringUtils;
 
+import javax.persistence.criteria.CriteriaBuilder;
+import javax.persistence.criteria.CriteriaQuery;
+import javax.persistence.criteria.Predicate;
+import javax.persistence.criteria.Root;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -52,15 +59,54 @@ public class VersionService {
         return responseDto;
     }
 
-    public List<VersionInformationDto> listVersionInformations() {
-        Iterable<VersionEntity> versions = versionRepository.findAll();
+    public VersionInformationContainerDto listVersionInformations(VersionInformationDto versionInformationDto, Pageable pageable) {
+        // create query and execute database statement
+        Page<VersionEntity> pagedResult = versionRepository.findAll((root, query, criteriaBuilder) -> {
+            List<Predicate> predicates = new ArrayList<>();
+            if (!StringUtils.isEmpty(versionInformationDto.getVersion())) {
+                predicates.add(criteriaBuilder.equal(root.get("version"), versionInformationDto.getVersion()));
+            }
+
+            if (!StringUtils.isEmpty(versionInformationDto.getArtifactId())) {
+                predicates.add(criteriaBuilder.like(criteriaBuilder.lower(root.get("artifactId")),
+                        "%" + versionInformationDto.getArtifactId().toLowerCase() + "%"));
+            }
+
+            if (!StringUtils.isEmpty(versionInformationDto.getGroupId())) {
+                predicates.add(criteriaBuilder.like(criteriaBuilder.lower(root.get("groupId")),
+                        "%" + versionInformationDto.getGroupId().toLowerCase() + "%"));
+            }
+
+            if (!StringUtils.isEmpty(versionInformationDto.getBranch())) {
+                predicates.add(criteriaBuilder.equal(root.get("branch"), versionInformationDto.getBranch()));
+            }
+
+            return criteriaBuilder.and(predicates.toArray(new Predicate[0]));
+        }, pageable);
+
+        // map data to DTO
         List<VersionInformationDto> versionList = new ArrayList<>();
-        VersionInformationDto version;
-        for (VersionEntity versionEntity : versions) {
-            version = new VersionInformationDto();
-            BeanUtils.copyProperties(versionEntity, version);
-            versionList.add(version);
+        if (! pagedResult.isEmpty()) {
+            VersionInformationDto version;
+            for (VersionEntity versionEntity : pagedResult.getContent()) {
+                version = new VersionInformationDto();
+                BeanUtils.copyProperties(versionEntity, version);
+                versionList.add(version);
+            }
         }
-        return versionList;
+
+        // map pages
+        PageDto pageDto = new PageDto();
+        pageDto.setTotalElements(pagedResult.getTotalElements());
+        pageDto.setTotalPages(pagedResult.getTotalPages());
+        pageDto.setCurrentPage(1 + pagedResult.getNumber());
+        pageDto.setNumberOfElements(pagedResult.getNumberOfElements());
+
+        // map versioninformations
+        VersionInformationContainerDto versionInformationContainerDto = new VersionInformationContainerDto();
+        versionInformationContainerDto.setVersionInformations(versionList);
+        versionInformationContainerDto.setPage(pageDto);
+
+        return versionInformationContainerDto;
     }
 }
